...
            viewModel.dismiss()
        } label: {
            Image(systemName: "xmark")
                .font(.system(size: 25, weight: .light))
                .foregroundColor(StoriesColor.Story.icon)
        }
        .accessibilityIdentifier("dismiss_button")
    }

    private var footer: some View {
        HStack(spacing: 16) {
            messageTextfield
            likeButton
...
            viewModel.toggleLikeCurrentItem()
        } label: {
            Image(systemName: viewModel.isCurrentItemLiked ? "heart.fill" : "heart")
                .font(.system(size: 28))
                .foregroundColor(viewModel.isCurrentItemLiked ? StoriesColor.Story.like : StoriesColor.Story.progressFill)
        }
        .accessibilityIdentifier("like_button")
    }

    private var shareButton: some View {
        Button {
            showShareAlert = true
        } label: {
...
